--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   widget_circular_animator: ^1.0.0
   flutter_spinkit: ^5.1.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - Assets/safir.png
+    - Assets/safirColored.png
+    - Assets/facebook.png
+    - Assets/google.png
     #- Assets/LOGO-01.jpeg
   #   - images/a_dot_ham.jpeg
 
