--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ flutter:
     - Assets/facebook.png
     - Assets/google.png
     - Assets/map.png
+    - Assets/alger.png
+    - Assets/oran.png
+    - Assets/circuit1.png
     #- Assets/LOGO-01.jpeg
   #   - images/a_dot_ham.jpeg
 
