--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,6 +61,11 @@ android {
         }
     }
 }
+android {
+    defaultConfig {
+        minSdkVersion 20
+    }
+}
 
 flutter {
     source '../..'
