--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   widget_circular_animator: ^1.0.0
   flutter_spinkit: ^5.1.0
   auto_size_text: ^3.0.0
+  dio: ^4.0.0
+  google_maps_flutter: ^2.0.6
+  flutter_polyline_points: ^1.0.0
+  
 
 dev_dependencies:
   flutter_test:
