--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^4.0.0
   google_maps_flutter: ^2.0.6
   flutter_polyline_points: ^1.0.0
+  provider: ^6.0.3
   
 
 dev_dependencies:
