--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - Assets/circuit1.png
     - Assets/user.png
     - Assets/flag.png
+    - Assets/location.png
+    - Assets/category.png
     #- Assets/LOGO-01.jpeg
   #   - images/a_dot_ham.jpeg
 
