--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   provider: ^6.0.3
   dotted_border: ^2.0.0+2
+  supabase: ^0.0.1-dev.14
+  flash: ^2.0.0
+  injector: ^2.0.0
   
   
 
